[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secret-type"
description = 'A Rune-style secret type for sensitive values in Python.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["cryptography", "typing-extensions"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/yasyf/secret-type#readme"
Issues = "https://github.com/yasyf/secret-type/issues"
Source = "https://github.com/yasyf/secret-type"

[tool.hatch.version]
path = "secret_type/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "Pygments",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=secret_type --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["secret_type/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
